--- a/src/client/css/red.less
+++ b/src/client/css/red.less
@@ -10,7 +10,12 @@ body {
 	color: #333;
 	background-color: #fff;
 }
-#map-canvas { height: 100% }
+#map-canvas { height: 100%; }
+.ops-create {
+	height: 100%;
+	padding-left: 20px;
+}
+
 .header-nav {background-color: #563d7c; border-color: #463265;}
 .header {height: 50px; padding: 0 15px;}
 .banner {padding-top: 15px;}
@@ -24,9 +29,9 @@ body {
 	margin-left: 0px;
 	margin-right: 0px;
 }
-.content .main {height: 100%;}
+.content .main {height: 100%; padding-left: 35px}
 .menugroup {font-weight: bold;}
-.menu {background-color: #f7f5fa; height: 100%; font-size: 11px;}
+.menu {background-color: #f7f5fa; height: 100%; font-size: 11px; padding-left: 0px;}
 .nav li {list-style: none;}
 .nav li a {color: #000; }
 .nav ul li a {margin-bottom: 15px; height: 20px;}
