--- a/src/client/templates/html/create_operation.html
+++ b/src/client/templates/html/create_operation.html
@@ -1,21 +1,22 @@
 <template name="create_operation">
+	<h4>Create Operation</h4>
 	<form class="form-horizontal" role="form">
-			<select class="selectpicker">
-				<option>Region 1</option>
-				<option>Region 2</option>
-				<option>Region 3</option>
-				<option>Region 4</option>
-				<option>Region 5</option>
-				<option>Region 6</option>
-				<option>Region 7</option>
-				<option>Region 8</option>
-				<option>Region 9</option>
-				<option>Region 10</option>
-				<option>Region 11</option>
-				<option>Region 12</option>
-				<option>NCR</option>
-				<option>ARMM</option>
-			</select>
-		
+			<div class="form-group">
+				<label for="opname" class="col-sm-2 control-label">Operation name</label>
+				<div class="col-sm-4">
+					<input type="text" id="opname" name="opname" placeholder="Operations name" class="form-control"/>
+				</div>
+			</div>
+			<div class="form-group">
+				<label for="region" class="col-sm-2 control-label">Region</label>
+				<div class="col-sm-4">
+					<select id="region" class="selectpicker form-control">
+						<option>-- Select Region --</option>
+						{{#each regions}}
+							<option value="{{name}}">{{description}}</option>
+						{{/each}}
+					</select>
+				</div>
+			</div>
 	</form>
 </template>
