--- a/src/client/templates/html/create_operation.html
+++ b/src/client/templates/html/create_operation.html
@@ -8,15 +8,54 @@
 				</div>
 			</div>
 			<div class="form-group">
-				<label for="region" class="col-sm-2 control-label">Region</label>
+				<label for="opdescription" class="col-sm-2 control-label">Description</label>
 				<div class="col-sm-4">
-					<select id="region" class="selectpicker form-control">
-						<option>-- Select Region --</option>
-						{{#each regions}}
-							<option value="{{name}}">{{description}}</option>
-						{{/each}}
-					</select>
+					<textarea id="opdescription" placeholder="Operation Description"
+						class="form-control"></textarea>
+				</div>
+			</div>
+			
+			{{> region_template}}
+			{{> lgu_template}}
+
+			<div class="form-group">
+				<label for="opbudget" class="col-sm-2 control-label">Operating Budget</label>
+				<div class="col-sm-4 controls">
+					<input type="text" id="opbudget" name="opbudget" 
+						placeholder="Operating Budget" class="form-control" 
+						pattern="\$?(([0-9]{1,3},([0-9]{3},)*)[0-9]{3}|[0-9]{1,3})(\.[0-9]{2})?" 
+        				data-validation-pattern-message="Must be a valid amount. e.g. 100,000.00"/>
 				</div>
 			</div>
 	</form>
+</template>
+
+<template name="region_template">
+	<div class="form-group">
+		<label for="region" class="col-sm-2 control-label">Region</label>
+		<div class="col-sm-4">
+			<select id="region" class="selectpicker form-control region">
+				<option>-- Select Region --</option>
+				{{#each regions}}
+					<option value="{{name}}">{{description}}</option>
+				{{/each}}
+			</select>
+		</div>
+	</div>
+</template>
+
+<template name="lgu_template">
+	<div class="form-group">
+		<label for="lgu" class="col-sm-2 control-label">LGU</label>
+		<div class="col-sm-4">
+			<select id="lgu" class="selectpicker form-control lgu">
+				<option selected="selected">-- Select LGU --</option>
+				{{#each lgus}}
+					{{#each lgu}}
+					<option value="{{province}}">{{province}}</option>
+					{{/each}}
+				{{/each}}
+			</select>
+		</div>
+	</div>
 </template>
